# ml_classifiers

./: .gitignore  .travis.yml  LICENSE.md  README.md
2layersNN/: CMakeLists.txt  ffnn.cpp  ffnn.h  ffnn.ui  main.cpp
CIFAR10visual/: CIFAR10visual  CIFAR10visual.pro  CMakeLists.txt  Makefile  README.md  main.cpp  moc_visualizer.cpp  ui_visualizer.h  visualizer.cpp  visualizer.h  visualizer.ui
knn/: CMakeLists.txt  knn  knn.cpp  knn.h  knn.ui  main.cpp
linearSVM/: CMakeLists.txt  h.cpp  main.cpp  svm.cpp  svm.h  svm.txt  svm.ui
linearSVMBrother/: h _with_regular.cpp  linearsvm.cpp  main.cpp  svm.cpp  svm.h  svm.ui
linearSoftmax/: CMakeLists.txt  README.md  main.cpp  softmax.cpp  softmax.h  softmax.ui
